# coco_orm

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/coco_orm/: __init__.py
src/coco_orm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/coco_orm/collections/: __init__.py  annotation.py  category.py  core.py  image.py  license.py
src/coco_orm/dataset/: utils.py
src/coco_orm/filters/: __init__.py  annotation.py  category.py  expression.py  properties.py  utils.py
src/coco_orm/models/: __init__.py  annotation.py  category.py  core.py  image.py  info.py  license.py
src/coco_orm/operators/: core.py
src/collections/: image_repository.py  utils.py
src/dataset/: core.py
src/filters/: core.py  image.py  license.py
src/operators/: __init__.py
