[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "coco_orm"
version = "1.0.1"
authors = [
  { name="Tarabon4ik" },
]
description = "An ORM built to simplify working with datasets in COCO format."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Tarabon4ik/coco_orm"
Issues = "https://github.com/Tarabon4ik/coco_orm/issues"