[metadata]
name = coco_orm
version = 1.0.0
author = Tarabon4ik
description = a simple ORM built to simplify working with datasets in COCO format.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Tarabon4ik/coco_orm
project_urls =
    repository = https://github.com/Tarabon4ik/coco_orm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src